successful animal list API fetch using async JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 id = "count"> 0</h1>
-    
+    <p id = "des"> no description</p>
     <input id ="mycheckbox" type="checkbox"> ok bro? </input>
     <button id = "mybutton"> ok </button>
     <script src="index.js"></script>
