sort method is easy using (a,b)=>a.age - b.age

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     transition-duration: 0.4s;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 ">switch model</button>
-  <script src="index.js"></script>
+ <script type="module" src="index.js"></script>
 
 
 
