--- a/index.html
+++ b/index.html
@@ -1,42 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="index.js" defer ></script>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-
-
 </head>
 <body>
-  
-  <div id="card" style="  flex-direction: column; font-weight: bolder; border : 10px ; margin : 30px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; border:  5px ; padding : 10px; background-color: rgb(65, 101, 179); border-color: black; border-radius: 5px; border-style: solid">
 
-    <img id="image"><img>
 
-    <p id="brand">brand : </p>
-    <br></br>
-    <p id="model">model: </p>
-    <br></br>
-    <p id="year">year : </p>
-    <br></br>
-    <p id="color">color : </p>
-  </div>
-<button id = "but" style="
-    background-color: #333333;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    transition-duration: 0.4s;
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-">switch model</button>
- <script type="module" src="index.js"></script>
+
+  <div id ="card" class ="card">
+  <img src= "loading.gif" id="img">
+<h1 class="title" style="text-align:center; color:rgb(255, 255, 255);" id ="name">Press Random or select a Pokemon to start</h1>
+
+<style>
+  #img {
+    width: 200px;
+    height: 200px;
+  }
+</style>
+
+
+<button id = "btn" class="btn"> Random Pokemon!</button>
+
+<p style="color:bisque">select a pokemon!</p>
+<select id = "select"></select>
+<button id ="indxBtn">GO!</button>
+</div>
+
 
 
 
